app/src/main/java/com/example/filmatory/errors/Api400Error.kt
package com.example.filmatory.errors

class Api400Error {
}